// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basic Basic with no items 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="keyword"
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Basic Basic with one item 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="keyword"
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      >
        <li
          className="list-group-item"
        >
          Item 1
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          />
        </li>
        <li
          className="list-group-item"
        >
          Item 2
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          />
        </li>
        <li
          className="list-group-item"
        >
          Item 3
          <button
            className="btn btn-danger"
            onClick={[Function]}
            type="button"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Full, live app It is running here 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Add element
        </button>
      </div>
      <div
        className="col-sm-auto offset-sm-1"
      >
        <button
          className="btn btn-danger"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <input
              className="form-control"
              onChange={[Function]}
              placeholder="keyword"
              type="text"
              value=""
            />
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
               
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="justify-content-center row"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <ul
        className="list-group"
      />
    </div>
  </div>
</div>
`;
